--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <title>Масштабирование фона</title>
   <style> 
    body {
-    background: url(https://pixnio.com/free-images/2020/10/05/2020-10-05-12-16-32-1200x800.jpg) fixed; /* Параметры фона */
+    background: url(https://i.pinimg.com/originals/cc/d6/12/ccd612e3952a5bf923d7ff1404169e36.jpg) fixed; /* Параметры фона */
     background-size: cover; /* Фон занимает всю доступную площадь */
    } 
   </style>
